<resources>
    <string name="app_name">M-Expense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="menu_in_main_list">List</string>
    <string name="menu_in_main_about">About</string>
    <string name="menu_in_main_register">Register</string>
    <string name="menu_in_detail_update">Update</string>
    <string name="menu_in_detail_delete">Delete</string>
    <string name="menu_in_action">Setting</string>

    <string name="error_not_found">Not found</string>
    <string name="error_no_info">No Information</string>
    <string name="error_blank_tripname">TripName cannot be blank</string>
    <string name="error_blank_destination">Destination cannot be blank</string>
    <string name="error_blank_description">Description cannot be blank</string>
    <string name="error_blank_start_date">Starting Date cannot be bank</string>
    <string name="error_empty_list">Empty list.</string>

    <string name="notification_empty_trip_list">There is no trip.</string>
    <string name="notification_empty_expense_list">There is no expense.</string>
    <string name="notification_create_success">Created successfully.</string>
    <string name="notification_create_fail">Not created successfully.</string>
    <string name="notification_delete_success">Deleted successfully.</string>
    <string name="notification_delete_fail">Not deleted successfully.</string>
    <string name="notification_update_success">Updated successfully.</string>
    <string name="notification_update_fail">Not updated successfully.</string>
    <string name="notification_delete_confirm">Are you sure to delete this?.</string>

    <string name="notification_backup_success">Backup successfully.</string>
    <string name="notification_backup_fail">Not backup successfully.</string>
    <string name="notification_reset_database_success">Reset database successfully</string>

    <!--    Label for Trip-->
    <string name="Label_trip_name">Trip Name</string>
    <string name="label_destination">Destination</string>
    <string name="label_start_date">Start date</string>
    <string name="label_risk_assesment">Risk Assessment</string>
    <string name="label_register">Register</string>
    <string name="label_update">Update</string>
    <string name="label_confirmation">Confirmation</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_type_risk">Type</string>
    <string name="label_choose_risk">Risk</string>
    <string name="label_choose_non_risk">No Risk</string>
    <string name="label_add_trip">Add Expense</string>
    <string name="label_m_expense">M-expense</string>
    <string name="label_trip_filter_keywords">Filter Keywords...</string>
    <string name="label_app_to_manage_expenses_for_travel_trips">App to manage expenses for travel trips</string>
    <string name="label_trip_search">Search</string>
    <string name="label_trip_search_trip_name">Name</string>
    <string name="label_trip_search_trip_destination">Destination</string>
    <string name="label_trip_search_date">Starting Date</string>
    <string name="label_trip_results_search">Search</string>

    <!--    Label for Expense-->
    <string name="label_expense_name">Expense Name</string>
    <string name="label_expense_comment">Comment</string>
    <string name="label_expense_date">Date</string>
    <string name="label_expense_time">Time</string>
    <string name="label_expense_amount">Amount</string>
    <string name="label_expense_type">Type</string>
    <string name="label_expense_cancel_button">Cancel</string>
    <string name="label_expense_add_expense_button">Add Expense</string>

    <!--    Label for setting-->
    <string name="label_setting_reset_database">Reset DataBase</string>
    <string name="label_setting_backup">Backup</string>
    <string name="label_setting">Setting</string>
    <string name="label_backup_firestore">Firestore Backup</string>
    <string name="label_reset_database">Reset Database</string>


    <string-array name="expense_type">
        <item>Travel</item>
        <item>Food</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>