<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.TripSearchFragment">

    <TextView
        android:id="@+id/fmTripSearchTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/label_trip_search"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fmTripSearchName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Label_trip_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fmTripSearchTitle" />

    <EditText
        android:id="@+id/fmTripSearchDestination"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/label_trip_search_trip_destination"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/fmTripSearchName"
        app:layout_constraintStart_toStartOf="@+id/fmTripSearchName"
        app:layout_constraintTop_toBottomOf="@+id/fmTripSearchName" />

    <EditText
        android:id="@+id/fmTripSearchDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/label_trip_search_date"
        android:inputType="date"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@id/fmTripSearchDestination"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/fmTripSearchDestination"
        app:layout_constraintTop_toBottomOf="@id/fmTripSearchDestination" />

    <Button
        android:id="@+id/fmTripSearchButtonCancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/label_cancel"
        app:layout_constraintStart_toStartOf="@id/fmTripSearchDate"
        app:layout_constraintTop_toBottomOf="@id/fmTripSearchDate" />

    <Button
        android:id="@+id/fmTripSearchButtonSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:text="@string/label_trip_results_search"
        app:layout_constraintBottom_toBottomOf="@+id/fmTripSearchButtonCancel"
        app:layout_constraintEnd_toEndOf="@+id/fmTripSearchDate"
        app:layout_constraintStart_toEndOf="@+id/fmTripSearchButtonCancel"
        app:layout_constraintTop_toTopOf="@+id/fmTripSearchButtonCancel"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>