<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.TripRegisterFragment">

        <LinearLayout
            android:id="@+id/fmTripRegisterLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/fmTripRegisterError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/fmTripRegisterTripName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Label_trip_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripRegisterDestination"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_destination"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripRegisterStartDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/label_start_date"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/fmTripRegisterRiskAssesment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="20dp"
                android:text="@string/label_risk_assesment"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/fmTripRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_register" />
        </LinearLayout>
</ScrollView>